bk_ida/gobmkida/c1/assimilate_neighbor_strings
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3823:20: error: subscripted value is not an array, pointer, or vector
v8 = ++liberty_mark[0]; 
       ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3859:25: error: use of undeclared identifier 'byte_9AA89F'
v19 = ( unsigned __int8)byte_9AA89F[v1]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3860:45: error: subscripted value is not an array, pointer, or vector
if ( byte_9AA89F[v1] || ( v20 = liberty_mark[0], dword_A741AC[v1] == liberty_mark[0]) ) 
                                ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3860:82: error: subscripted value is not an array, pointer, or vector
if ( byte_9AA89F[v1] || ( v20 = liberty_mark[0], dword_A741AC[v1] == liberty_mark[0]) ) 
                                                                     ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3860:50: error: use of undeclared identifier 'dword_A741AC'
if ( byte_9AA89F[v1] || ( v20 = liberty_mark[0], dword_A741AC[v1] == liberty_mark[0]) ) 
                                                 ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3860:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[v1] || ( v20 = liberty_mark[0], dword_A741AC[v1] == liberty_mark[0]) ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3890:1: error: use of undeclared identifier 'dword_A741AC'
dword_A741AC[v1] = v20; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3893:25: error: use of undeclared identifier 'byte_9AA88C'
v29 = ( unsigned __int8)byte_9AA88C[v1]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3894:45: error: subscripted value is not an array, pointer, or vector
if ( byte_9AA88C[v1] || ( v30 = liberty_mark[0], string_number[v1 + 384] == liberty_mark[0]) ) 
                                ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3894:89: error: subscripted value is not an array, pointer, or vector
if ( byte_9AA88C[v1] || ( v30 = liberty_mark[0], string_number[v1 + 384] == liberty_mark[0]) ) 
                                                                            ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3894:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[v1] || ( v30 = liberty_mark[0], string_number[v1 + 384] == liberty_mark[0]) ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/engine/board.c:3928:63: error: subscripted value is not an array, pointer, or vector
if ( *( _BYTE *)( v1 + 10135713) || ml[v1 + 1] == liberty_mark[0] ) 
                                                  ~~~~~~~~~~~~^~
12 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/assimilate_neighbor_strings/src/obj/1/board.o] Error 1
